# darfweb

./: README.md  pyproject.toml
src/darfweb/: __init__.py
src/darfweb/api/: main.py
src/darfweb/cli/: __init__.py  main.py
src/darfweb/core/: exceptions.py  models.py  sinacor.py
src/darfweb/core/config/: brokers.json  parser_models.json
src/darfweb/core/llm/: __init__.py  base.py  factory.py  gemini_parser.py  ollama_parser.py  utils.py
src/darfweb/core/parsers/: __init__.py  base.py  btg_parser.py  factory.py  genial_parser.py  parser_factory.py  search.py  skeleton.py  xp_parser.py
